@@ -1,0 +1,20 @@
+﻿<Window x:Class="GAPPSF.GPX.ExportGarminCommunicatorWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:l="clr-namespace:GAPPSF.Localization"
+        xmlns:p="clr-namespace:GAPPSF.Core"
+        xmlns:ui="clr-namespace:GAPPSF.UIControls"
+        Title="{l:Translate ExportWithGarminCommunicator}" Height="300" Width="300">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Button x:Name="cancelButton" Margin="4" Grid.Row="0" Content="{l:Translate Cancel}" Visibility="Collapsed" Click="cancelButton_Click" />
+        <Button x:Name="startButton" Margin="4" Grid.Row="0" Content="{l:Translate Start}" Click="startButton_Click"/>
+        <Button Margin="4" Grid.Row="0" Content="{l:Translate Cancel}" />
+        <WebBrowser Grid.Row="1" x:Name="webBrowser1" />
+        <ProgressBar Grid.Row="2" x:Name="progBar" Height="20" Minimum="0" Maximum="100" Value="0" />
+    </Grid>
+</Window>
